[tool.poetry]
name = "sample-ci"
version = "0.1.0"
description = ""
authors = ["Daniel van Flymen"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
confidential = "^2.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pytest = "^5.2"
pytest-django = "^3.6"
pytest-xdist = "^1.30"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
